add assets to public folder

--- a/src/components/HeroFourthPage.astro
+++ b/src/components/HeroFourthPage.astro
@@ -1,8 +1,8 @@
 ---
-import first from "../assets/first.jpeg"
-import second from "../assets/second.jpeg"
-import third from "../assets/third.jpeg"
-import fourth from "../assets/fourth.jpeg"
+import first from "../../public/assets/first.jpeg"
+import second from "../../public/assets/second.jpeg"
+import third from "../../public/assets/third.jpeg"
+import fourth from "../../public/assets/fourth.jpeg"
 
 
 ---
