--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import gsap from "gsap"
-import heroVideo from "../assets/heroVideo2.mp4"
+import heroVideo from "../../public/assets/heroVideo2.mp4"
 import Marquee from "../components/marquee.astro"
 import HeroSecond from '../components/HeroSecondPage.astro';
 import HeroFourthPage from '../components/HeroFourthPage.astro';
@@ -21,29 +21,29 @@ import HeroLastPage from '../components/HeroLastPage.astro';
 			<div class="second w-[60%] h-[1200px] absolute flex items-center justify-center ">
 				<div class=" w-[50%] flex flex-col gap-4 items-center scroll opacity-0 translate-y-full pointer-events-none">
 					<div class="placeholders object-cover">
-						<img class="w-full h-full object-cover rounded-2xl" src="../../src/assets/third.jpeg"/>
+						<img class="w-full h-full object-cover rounded-2xl" src="/assets/third.jpeg"/>
 					</div>
 					<div class="placeholders object-cover">
-						<img class="w-full h-full object-cover rounded-2xl" src="../../src/assets/second.jpeg"/>
+						<img class="w-full h-full object-cover rounded-2xl" src="assets/second.jpeg"/>
 					</div>
 					<div class="placeholders object-cover">
-						<img class="w-full h-full object-cover rounded-2xl" src="../../src/assets/third.jpeg"/>
+						<img class="w-full h-full object-cover rounded-2xl" src="/assets/third.jpeg"/>
 					</div>
 					<div class="placeholders object-cover">
-						<img class="w-full h-full object-cover rounded-2xl" src="../../src/assets/fourth.jpeg"/>
+						<img class="w-full h-full object-cover rounded-2xl" src="/assets/fourth.jpeg"/>
 					</div>
-					<div class="picture"><img class="w-full h-full object-cover rounded-2xl" src="../../src/assets/first.jpeg"/></div>
+					<div class="picture"><img class="w-full h-full object-cover rounded-2xl" src="/assets/first.jpeg"/></div>
 					<div class="placeholders object-cover">
-						<img class="w-full h-full object-cover rounded-2xl" src="../../src/assets/fifth.jpeg"/>
-					</div>
-					<div class="placeholders object-cover">
-						<img class="w-full h-full object-cover rounded-2xl" src="../../src/assets/sixth.jpeg"/>
+						<img class="w-full h-full object-cover rounded-2xl" src="/assets/fifth.jpeg"/>
 					</div>
 					<div class="placeholders object-cover">
-						<img class="w-full h-full object-cover rounded-2xl" src="../../src/assets/second.jpeg"/>
+						<img class="w-full h-full object-cover rounded-2xl" src="/assets/sixth.jpeg"/>
 					</div>
 					<div class="placeholders object-cover">
-						<img class="w-full h-full object-cover rounded-2xl" src="../../src/assets/third.jpeg"/>	
+						<img class="w-full h-full object-cover rounded-2xl" src="/assets/second.jpeg"/>
+					</div>
+					<div class="placeholders object-cover">
+						<img class="w-full h-full object-cover rounded-2xl" src="/assets/third.jpeg"/>	
 					</div>
 				</div>
 			</div>
