asset source updation

--- a/src/components/HeroFifthPage.astro
+++ b/src/components/HeroFifthPage.astro
@@ -1,18 +1,18 @@
 ---
 // CustomCursor.astro
 const images = [
-  'src/assets/first.jpeg',
-  'src/assets/second.jpeg',
-  'src/assets/third.jpeg'
+  '/assets/first.jpeg',
+  '/assets/second.jpeg',
+  '/assets/third.jpeg'
 ];
 
 const images2 = [
-  'src/assets/fourth.jpeg',
-  'src/assets/fifth.jpeg',
-  'src/assets/sixth.jpeg'
+  '/assets/fourth.jpeg',
+  '/assets/fifth.jpeg',
+  '/assets/sixth.jpeg'
 ]
 
-const video = 'src/assets/heroVideo.mp4';
+const video = '/assets/heroVideo.mp4';
 
 const cursorTexts = ['Text 1', 'Text 2', 'Text 3'];
 const cursorTexts2 = ['Text 4', 'Text 5', 'Text 6'];
