--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,7 +55,7 @@ import HeroLastPage from '../components/HeroLastPage.astro';
 		</div>
 		</section>
 		<div class="w-full h-full relative page1">
-			<nav class="navbar fixed top-0 left-0 w-full bg-white shadow-md z-50">
+			<nav class="navbar fixed top-0 left-0 w-full bg-white shadow-md z-50 opacity-0">
 				<div class="container mx-auto flex justify-between items-center p-4">
 					<div class="text-xl font-bold">Logo</div>
 					<ul class="flex space-x-4">
