--- a/src/components/HeroSixthPage.astro
+++ b/src/components/HeroSixthPage.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<div class="gallery">
+<div class="gallery bg-white">
 	<div class="left">
 		<div class="desktopContent">
 			<div class="desktopContentSection">
@@ -84,6 +84,7 @@
 .gallery {
   display:flex;	
   /* outline:1px solid red; */
+  
 }
 .left {
 	width:50%;
