--- a/src/components/HeroSecondPage.astro
+++ b/src/components/HeroSecondPage.astro
@@ -4,9 +4,9 @@
 ---
 
 
-<div class="w-screen min-h-screen flex flex-col items-center gap-10 secondPage text-black">
-    <div class="w-full h-[20%] animated-text mt-10 flex items-start justify-center">
-        <p class="py-16 text-xl font-inter">[ <span class="font-inter" >Who we are </span>]</p>
+<div class="w-screen min-h-screen flex flex-col items-center gap-10 secondPage bg-white text-black">
+    <div class="w-full h-[20%] animated-texts mt-10 flex items-start justify-center">
+        <p class="py-16 text-xl font-inter ">[ <span class="font-inter" >Who we are </span>]</p>
     </div>
     <div class="max-w-8xl mx-auto text-6xl ">    
         <div class="flex items-end gap-2 ">
@@ -14,18 +14,18 @@
                 <img class="" src="">
             </div>
             <div class="w-full h-full overflow-hidden ">
-                <p class="animated-text">CXPoint delivers expert Contact </p>
+                <p class="animated-texts">CXPoint delivers expert Contact </p>
             </div>
         </div>
         <div class="w-full h-full overflow-hidden ">
-        <p class="animated-text">Center consulting, helping businesses transition </p>
+        <p class="animated-texts">Center consulting, helping businesses transition </p>
         </div>
         <div class="w-full h-full overflow-hidden ">
-        <p class="animated-text">from legacy systems to modern cloud-based</p>
+        <p class="animated-texts">from legacy systems to modern cloud-based</p>
         </div>
         <div class="flex items-start ">
             <div class="w-full h-full overflow-hidden ">
-            <p class="animated-text ">CCaaS platforms with bespoke solutions.</p>
+            <p class="animated-texts ">CCaaS platforms with bespoke solutions.</p>
             </div>
             <div class="w-32 h-0 rounded-2xl bg-slate-400 thumbnails">
 
@@ -47,14 +47,17 @@
 
 <style>
     .font-inter{
-        font-family: "MediaanItalic";
-		font-weight: 100;
-		line-height: 1;
+        font-family: "new";
+		font-weight: 800;
+		line-height: 1.3;
+        font-stretch: 400%;
     }
 
-    .animated-text{
-        font-family: "akira";
-        font-size: 2.1rem;
+    .animated-texts{
+        font-family: "new";
+        font-weight: 800;
+        font-stretch: 600%;
+        font-size: 3rem;
     }
 </style>
 
@@ -63,7 +66,7 @@
 
     gsap.registerPlugin(ScrollTrigger)
       
-      const textElements = document.querySelectorAll(".animated-text");
+      const textElements = document.querySelectorAll(".animated-texts");
       const thumbnailElements = document.querySelectorAll(".thumbnails"); // Select all thumbnail elements
       
       textElements.forEach((textElement , index) => {
@@ -90,12 +93,6 @@
         },
         "-=0.8"
         ); // Use "<" to start this animation at the same time as the previous one
-        t1.to(".secondPage", {
-            backgroundColor: "black",
-            color: "white",
-            duration: 1,
-            ease: "power2.out"
-        })
 
     });
 
