--- a/src/pages/company/index.astro
+++ b/src/pages/company/index.astro
@@ -37,14 +37,14 @@ const sections = [
                 <div class="text-xl font-bold text-black mix-blend-difference"><a href="/">Logo</a></div>
                 <ul class="flex space-x-4 px-6 py-4 bg-[#373737] rounded-full ">
                     <li class="nav-links"><a href="/products" class="text-white hover:rounded-full">Products</a></li>
-                    <li class="nav-links"><a href="#about" class="text-white ">About</a></li>
+                    <li class="nav-links"><a href="/company" class="text-white ">Company </a></li>
                     <li class="nav-links"><a href="/services" class="text-white ">Services</a></li>
                     <li class="nav-links"><a href="#contact" class="text-white ">Contact</a></li>
                 </ul>
                 <button class=" text-black text-[0.9rem] px-6 py-4 rounded-full bg-[#F9FC50] font-semibold">Get in touch</button>
             </div>
         </nav>
-        <div class="w-full min-h-screen px-20 pt-20">
+        <div class="w-full min-h-screen px-20 py-20">
             <div class="w-full pt-24">
                 <div class="w-full h-full overflow-hidden">
                     <p class="text-[80px] akira animated-text ">With over 17 years of design</p>
@@ -75,7 +75,7 @@ const sections = [
                 <div class="w-[50%] h-full flex items-center p-12 opaq">
                     <div>
                         <p class="text-[20px] font-bold">
-                            Our story
+                            Our Mission
                         </p>
                         <div class="text-[16px] font-semibold text-gray-500">
                             Founded by Tom Garcy, a designer who's spent nearly two decades in the industry, we focus on solving your real-world challenges. It's not about fancy designs or promises that dont deliver. It's about crafting solutions that can help you grow, engage users and get real results.
@@ -85,12 +85,22 @@ const sections = [
                 <div class="w-[50%] h-full flex items-center p-12 opaq">
                     <div>
                         <p class="text-[20px] font-bold">
-                            Our Approach
+                            Our Vision
                         </p>
                         <p class="text-[16px] font-semibold text-gray-500">
                             We don't just create designs - we solve your problems. It all starts with listening. We dive deep into understanding your business, your challenges, and your goals. Then we use data, creativity and practical solutions to craft a plan that works. No unnecessary extras, no bloated budgets - just what makes sense for you.  
                         </p>
                     </div>
+                </div>
+            </div>
+            <div class="w-full flex px-12 pt-10">
+                <div>
+                    <p class="text-[20px] font-bold">
+                        World Wide Locations
+                    </p>
+                    <p class="text-[16px] font-semibold text-gray-500">
+                        We don't just create designs - we solve your problems. It all starts with listening. We dive deep into understanding your business, your challenges, and your goals. Then we use data, creativity and practical solutions to craft a plan that works. No unnecessary extras, no bloated budgets - just what makes sense for you.  
+                    </p>
                 </div>
             </div>
         </div>
@@ -99,7 +109,7 @@ const sections = [
         </div>
         <div class="w-full h-screen flex flex-col items-center justify-around px-20 space-y-4 my-28">
             {sections.map((section) => (
-                <div class="w-full flex justify-around items-center space-y-14">
+                <div class="w-full flex justify-between items-center space-y-14">
                     <div class="flex items-start justify-center gap-2">
                         <p class="text-2xl font-semibold">{section.number}</p>
                         <p class="text-4xl font-bold">{section.title}</p>
@@ -111,60 +121,69 @@ const sections = [
                 <hr class="w-full my-4 border-t border-gray-300" />
             ))}
         </div>
-        <div id="testimonialv" class="testimonial-content-sticky flex items-center justify-center mt-20" style=" overflow-x: hidden;">
-            <div class="testimonial-content-block-v2 flex gap-10">
-                <div class="testimonial-single-card-block">
-                    <div class="testimonial-image-block">
-                        <img src="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d0b2e9f8328911bfe1_loren.png" loading="lazy" sizes="(max-width: 479px) 200px, (max-width: 991px) 250px, (max-width: 1439px) 15vw, 14vw" srcset="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d0b2e9f8328911bfe1_loren-p-500.png 500w, https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d0b2e9f8328911bfe1_loren.png 800w" alt="" class="testimonial-image">
-                    </div>
-                    <div class="testimonial-content-block">
-                        <h3 class="testimonial-author-name">Loren</h3>
-                        <div class="testimonial-designation-text">Project manager</div>
-                    </div>
+        <div class="w-full h-screen pt-8 px-14 flex flex-col items-start justify-between">
+            <div class="w-[60%] akira text-4xl ">
+                <div class="flex gap-2">
+                    <img src={astrix.src} alt="astrix" class="w-[30px] h-[30px] astrix" />
+                    <p>And let’s be clear: we hate wasting time or money.</p>
                 </div>
-                <div class="testimonial-single-card-block">
-                    <div class="testimonial-image-block">
-                        <img src="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d0cad94a1b82e31b6a_david.png" loading="lazy" sizes="(max-width: 479px) 200px, (max-width: 991px) 250px, (max-width: 1439px) 15vw, 14vw" srcset="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d0cad94a1b82e31b6a_david-p-500.png 500w, https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d0cad94a1b82e31b6a_david.png 801w" alt="" class="testimonial-image">
+                We don’t inflate our budgets just because we think you won’t accept our hourly rate. In fact, we don’t care about hourly rates. Thanks to our experience, we work at lightning speed. We focus on getting things done efficiently, without cutting corners.
+            </div>
+            <div id="testimonialv" class="testimonial-content-sticky flex items-center justify-center mt-20" style=" overflow-x: hidden;">
+                <div class="testimonial-content-block-v2 flex gap-10">
+                    <div class="testimonial-single-card-block">
+                        <div class="testimonial-image-block">
+                            <img src="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d0b2e9f8328911bfe1_loren.png" loading="lazy" sizes="(max-width: 479px) 200px, (max-width: 991px) 250px, (max-width: 1439px) 15vw, 14vw" srcset="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d0b2e9f8328911bfe1_loren-p-500.png 500w, https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d0b2e9f8328911bfe1_loren.png 800w" alt="" class="testimonial-image">
+                        </div>
+                        <div class="testimonial-content-block">
+                            <h3 class="testimonial-author-name font-bold">Loren</h3>
+                            <div class="testimonial-designation-text font-bold text-[#8D8D9B]">Project manager</div>
+                        </div>
                     </div>
-                    <div class="testimonial-content-block">
-                        <h3 class="testimonial-author-name">David</h3>
-                        <div class="testimonial-designation-text">UX Designer, Research</div>
+                    <div class="testimonial-single-card-block">
+                        <div class="testimonial-image-block">
+                            <img src="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d0cad94a1b82e31b6a_david.png" loading="lazy" sizes="(max-width: 479px) 200px, (max-width: 991px) 250px, (max-width: 1439px) 15vw, 14vw" srcset="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d0cad94a1b82e31b6a_david-p-500.png 500w, https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d0cad94a1b82e31b6a_david.png 801w" alt="" class="testimonial-image">
+                        </div>
+                        <div class="testimonial-content-block">
+                            <h3 class="testimonial-author-name font-bold">David</h3>
+                            <div class="testimonial-designation-text font-bold text-[#8D8D9B]">UX Designer, Research</div>
+                        </div>
                     </div>
-                </div>
-                <div class="testimonial-single-card-block">
-                    <div class="testimonial-image-block">
-                        <img src="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d080115bb772af2a6c_helena.png" loading="lazy" sizes="(max-width: 479px) 200px, (max-width: 991px) 250px, (max-width: 1439px) 15vw, 14vw" srcset="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d080115bb772af2a6c_helena-p-500.png 500w, https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d080115bb772af2a6c_helena.png 801w" alt="" class="testimonial-image">
+                    <div class="testimonial-single-card-block">
+                        <div class="testimonial-image-block">
+                            <img src="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d080115bb772af2a6c_helena.png" loading="lazy" sizes="(max-width: 479px) 200px, (max-width: 991px) 250px, (max-width: 1439px) 15vw, 14vw" srcset="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d080115bb772af2a6c_helena-p-500.png 500w, https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d080115bb772af2a6c_helena.png 801w" alt="" class="testimonial-image">
+                        </div>
+                        <div class="testimonial-content-block">
+                            <h3 class="testimonial-author-name font-bold">Helena</h3>
+                            <div class="testimonial-designation-text font-bold text-[#8D8D9B]">Brand Designer</div>
+                        </div>
                     </div>
-                    <div class="testimonial-content-block">
-                        <h3 class="testimonial-author-name">Helena</h3>
-                        <div class="testimonial-designation-text">Brand Designer</div>
+                    <div class="testimonial-single-card-block">
+                        <div class="testimonial-image-block">
+                            <img src="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d06fbefee4ba36d54e_nizam.png" loading="lazy" sizes="(max-width: 479px) 200px, (max-width: 991px) 250px, (max-width: 1439px) 15vw, 14vw" srcset="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d06fbefee4ba36d54e_nizam-p-500.png 500w, https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d06fbefee4ba36d54e_nizam.png 801w" alt="" class="testimonial-image">
+                        </div>
+                        <div class="testimonial-content-block">
+                            <h3 class="testimonial-author-name font-bold">Nizam</h3>
+                            <div class="testimonial-designation-text font-bold text-[#8D8D9B]">UI Designer, Webflow</div>
+                        </div>
                     </div>
-                </div>
-                <div class="testimonial-single-card-block">
-                    <div class="testimonial-image-block">
-                        <img src="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d06fbefee4ba36d54e_nizam.png" loading="lazy" sizes="(max-width: 479px) 200px, (max-width: 991px) 250px, (max-width: 1439px) 15vw, 14vw" srcset="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d06fbefee4ba36d54e_nizam-p-500.png 500w, https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d06fbefee4ba36d54e_nizam.png 801w" alt="" class="testimonial-image">
+                    <div class="testimonial-single-card-block">
+                        <div class="testimonial-image-block">
+                            <img src="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d01d1274373b538f0d_jaydip.png" loading="lazy" sizes="(max-width: 479px) 200px, (max-width: 991px) 250px, (max-width: 1439px) 15vw, 14vw" srcset="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d01d1274373b538f0d_jaydip-p-500.png 500w, https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d01d1274373b538f0d_jaydip.png 801w" alt="" class="testimonial-image">
+                        </div>
+                        <div class="testimonial-content-block">
+                            <h3 class="testimonial-author-name font-bold">Jaydip</h3>
+                            <div class="testimonial-designation-text font-bold text-[#8D8D9B]">UX &amp; UI Designer</div>
+                        </div>
                     </div>
-                    <div class="testimonial-content-block">
-                        <h3 class="testimonial-author-name">Nizam</h3>
-                        <div class="testimonial-designation-text">UI Designer, Webflow</div>
-                    </div>
-                </div>
-                <div class="testimonial-single-card-block">
-                    <div class="testimonial-image-block">
-                        <img src="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d01d1274373b538f0d_jaydip.png" loading="lazy" sizes="(max-width: 479px) 200px, (max-width: 991px) 250px, (max-width: 1439px) 15vw, 14vw" srcset="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d01d1274373b538f0d_jaydip-p-500.png 500w, https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d01d1274373b538f0d_jaydip.png 801w" alt="" class="testimonial-image">
-                    </div>
-                    <div class="testimonial-content-block">
-                        <h3 class="testimonial-author-name">Jaydip</h3>
-                        <div class="testimonial-designation-text">UX &amp; UI Designer</div>
-                    </div>
-                </div>
-                <div class="testimonial-single-card-block">
-                    <div class="testimonial-image-block">
-                        <img src="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d0124be164a91d60be_tom.png" loading="lazy" sizes="(max-width: 479px) 200px, (max-width: 991px) 250px, (max-width: 1439px) 15vw, 14vw" srcset="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d0124be164a91d60be_tom-p-500.png 500w, https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d0124be164a91d60be_tom.png 800w" alt="" class="testimonial-image">
-                    </div>
-                    <div class="testimonial-content-block">
-                        <h3 class="testimonial-author-name">Tom</h3>
-                        <div class="testimonial-designation-text">Founder</div>
+                    <div class="testimonial-single-card-block">
+                        <div class="testimonial-image-block">
+                            <img src="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d0124be164a91d60be_tom.png" loading="lazy" sizes="(max-width: 479px) 200px, (max-width: 991px) 250px, (max-width: 1439px) 15vw, 14vw" srcset="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d0124be164a91d60be_tom-p-500.png 500w, https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d0124be164a91d60be_tom.png 800w" alt="" class="testimonial-image">
+                        </div>
+                        <div class="testimonial-content-block">
+                            <h3 class="testimonial-author-name font-bold">Tom</h3>
+                            <div class="testimonial-designation-text font-bold text-[#8D8D9B]">Founder</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -458,7 +477,14 @@ const sections = [
         main.addEventListener('mouseleave', hideCursor);
         main.addEventListener('mousemove', (e) => {
         updateCursorPosition(e);
-        });
+    });
+
+    gsap.from('.astrix', {
+        rotation: 360,
+        duration: 4,
+        ease: 'linear',
+        repeat: -1
+    });
 </script>
 
 
