--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ import HeroSeventhPage from '../components/HeroSeventhPage.astro';
 					<div class="text-xl font-bold text-white"><a href="/">Logo</a></div>
 					<ul class="flex space-x-4 px-6 py-4 bg-[#373737] rounded-full ">
 						<li class="nav-links"><a href="/products" class="text-white hover:rounded-full">Products</a></li>
-						<li class="nav-links"><a href="#about" class="text-white ">About</a></li>
+						<li class="nav-links"><a href="/company" class="text-white ">Company </a></li>
 						<li class="nav-links"><a href="/services" class="text-white ">Services</a></li>
 						<li class="nav-links"><a href="#contact" class="text-white ">Contact</a></li>
 					</ul>
