--- a/src/pages/products/index.astro
+++ b/src/pages/products/index.astro
@@ -42,8 +42,9 @@ import Pricing from "../../components/Pricing.astro";
         </div>
         <div>
             <div class="w-full h-full overflow-hidden flex items-start justify-between gap-10 rounded-2xl  py-5">
-                <div class="w-[40%] h-[200px] bg-gray-500 rounded-2xl px-10 animated-text overflow-hidden">
-                    <video autoplay muted loop src={video} class="w-full h-full object-cover scale-150"></video>
+                <div class="w-[40%] h-[200px] bg-[#2476FF] rounded-tr-3xl rounded-bl-3xl px-10 animated-text overflow-hidden">
+                    <!-- <video autoplay muted loop src={video} class="w-full h-full object-cover scale-150"></video> -->
+                     
                 </div>
                 <div class="w-[60%] h-full flex flex-col justify-between">
                     <div class="w-full h-fulloverflow-hidden ">
