--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,15 +2,15 @@
 import Layout from '../layouts/Layout.astro';
 import gsap from "gsap"
 import heroVideo from "../../public/assets/heroVideo2.mp4"
-import heroVideo3 from "../../public/assets/heroVideo3.mp4"
+import heroVideo3 from "/assets/heroVideo3.mp4"
 import Marquee from "../components/marquee.astro"
 import HeroSecond from '../components/HeroSecondPage.astro';
 import HeroFourthPage from '../components/HeroFourthPage.astro';
 import HeroFifthPage from '../components/HeroFifthPage.astro';
 import HeroSixthPage from '../components/HeroSixthPage.astro';
 import HeroLastPage from '../components/HeroLastPage.astro';
-import astrixwhite from "../../public/assets/whiteAsterisk.png"
-import astrixblack from "../../public/assets/asterisk.png"
+import astrixwhite from "/assets/whiteAsterisk.png"
+import astrixblack from "/assets/asterisk.png"
 import StackingCards from '../components/StackingCards.astro';
 import Horizontal from '../components/Horizontal .astro';
 import HeroSeventhPage from '../components/HeroSeventhPage.astro';
@@ -91,9 +91,9 @@ import HeroSeventhPage from '../components/HeroSeventhPage.astro';
 		<HeroSixthPage/>
 			
 		<HeroLastPage/>
-		<div class="w-screen h-screen bg-white">
+		<!-- <div class="w-screen h-screen bg-white">
 			<p>test</p>
-		</div>
+		</div> -->
 	</main>
 </Layout>
 
