--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -60,22 +60,22 @@ const { title } = Astro.props;
 
 	@font-face {
 		font-family: 'akira';
-		src: url("../fonts/Akira.ttf");
+		src: url("/fonts/Akira.ttf");
 	}
 
 	@font-face {
 		font-family: 'new';
-		src: url("../fonts/Heading-Now-Variable.ttf");
+		src: url("/fonts/Heading-Now-Variable.ttf");
 	}
 
 	@font-face {
 		font-family: 'items';
-		src: url("../fonts/items-condensed.otf");
+		src: url("/fonts/items-condensed.otf");
 	}
 
 	@font-face{
 		font-family: "mediaanItalic";
-		src: url("../fonts/MediaanItalic.ttf");
+		src: url("/fonts/MediaanItalic.ttf");
 	}
 
 
