Resource Page addition

--- a/src/components/HeroLastPage.astro
+++ b/src/components/HeroLastPage.astro
@@ -1,15 +1,13 @@
 ---
 // PinnedScroll.astro
 ---
-
-
   
 <div class="container">
     <div class="pinned-section relative" id="pinnedSection">
         <div class="flex flex-col items-center justify-center ">
-            <p class="text-white font-mediaan text-4xl leading-none">Lets connect</p>
+            <p class="font-mediaan text-4xl leading-none">Lets connect</p>
             <h2 class="py-2 mt-14 mb-14 border-y-2z-10 leading-none">How it Works</h2>
-            <p class="text-white font-mediaan text-4xl leading-none">Scroll .</p>
+            <p class="font-mediaan text-4xl leading-none">Scroll .</p>
         </div>
         
         <div class="horizontal-animation flex items-center justify-center w-full z-40" id="horizontalAnimation">
@@ -47,7 +45,7 @@
     }
     .container {
         height: 200vh; /* Make the container tall enough to scroll */
-        background-color: #1d1d1d;
+        background-color: white;
         position: relative;
         text-align: center;
         overflow: hidden;
@@ -55,7 +53,7 @@
   
     .pinned-section {
         height: 100vh; /* Full viewport height */
-        background-color: #0C0C0C;
+        background-color: white;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -66,7 +64,7 @@
     h2 {
         font-size: 7rem; /* Increase font size */
         text-align: center; /* Center the text */
-        color: white; /* Optional: Change text color */
+        color: black; /* Optional: Change text color */
         line-height: 0.47;
         font-family: "akira";
     }
