--- a/src/components/Stats.astro
+++ b/src/components/Stats.astro
@@ -1,10 +1,13 @@
-<div class="w-screen h-full my-20">
+---
+---
+
+<div class="w-screen h-full my-20 bg-white">
     <div class="w-full h-full flex items-center justify-start">
         <p class="w-[60%] font-new font-semibold stretch text-[3rem] ps-16 leading-none">
             Results That Speak: Achieve lasting impressions with our superior usability and aesthetics.
         </p>
     </div>  
-    <div class="w-full h-full flex flex-col order-1 justify-center mt-16">
+    <div class="w-full h-full flex flex-col order-1 justify-center mt-16 bg-white">
         <div class="w-full h-[15rem] relative bar">
             <div class="absolute w-[45%] h-[11rem] bg-black z-10 black"></div>
             <div class="absolute w-[94%] h-[11rem] bg-[#D2FF56] rounded-r-[3rem] green flex items-center justify-end pe-10 font-new font-semibold stretch text-[3rem] leading-none stretch">108%</div>
@@ -14,11 +17,11 @@
                 Engagement and layout 
             </p>
             <p class="w-[40%] font-new font-normal stretch text-[1rem] ps-16 leading-1">
-                We captivate users from the first interaction with a flawless user experience. It’s not just about functionality; it’s about creating an experience users love. They’ll remember, talk about, and share your brand, turning customers into loyal advocates.
+                We captivate users from the first interaction with a flawless user experience. It's not just about functionality; it's about creating an experience users love. They'll remember, talk about, and share your brand, turning customers into loyal advocates.
             </p>
         </div>
     </div>
-    <div class="w-full h-full flex flex-col order-1 justify-center mt-16">
+    <div class="w-full h-full flex flex-col order-1 justify-center mt-16 bg-white">
         <div class="w-full h-[15rem] relative bar">
             <div class="absolute w-[15%] h-[11rem] bg-black z-10 black"></div>
             <div class="absolute w-[94%] h-[11rem] bg-[#D2FF56] rounded-r-[3rem] green flex items-center justify-end pe-10 font-new font-semibold stretch text-[3rem] leading-none stretch">81%</div>
@@ -28,11 +31,11 @@
                 Ease of use
             </p>
             <p class="w-[40%] font-new font-normal stretch text-[1rem] ps-16 leading-1">
-                Our designs eliminate the need for complex tutorials and lengthy demos. Users will love your product from the first use because it’s intuitive and effortless. We create interfaces that are beautiful and easy to navigate, enhancing user satisfaction and retention.
+                Our designs eliminate the need for complex tutorials and lengthy demos. Users will love your product from the first use because it's intuitive and effortless. We create interfaces that are beautiful and easy to navigate, enhancing user satisfaction and retention.
             </p>
         </div>
     </div>
-    <div class="w-full h-full flex flex-col order-1 justify-center mt-16">
+    <div class="w-full h-full flex flex-col order-1 justify-center mt-16 bg-white">
         <div class="w-full h-[15rem] relative bar">
             <div class="absolute w-[35%] h-[11rem] bg-black z-10 black"></div>
             <div class="absolute w-[94%] h-[11rem] bg-[#D2FF56] rounded-r-[3rem] green flex items-center justify-end pe-10 font-new font-semibold stretch text-[3rem] leading-none stretch">3-4 x</div>
@@ -42,11 +45,11 @@
                 Speed and efficiency 
             </p>
             <p class="w-[40%] font-new font-normal stretch text-[1rem] ps-16 leading-1">
-                Fast, efficient, and smooth—our designs streamline user interactions, making every second count.  A seamless experience reduces friction, leading to quicker adoption and happier customers.
+                Fast, efficient, and smooth—our designs streamline user interactions, making every second count. A seamless experience reduces friction, leading to quicker adoption and happier customers.
             </p>
         </div>
     </div>
-    <div class="w-full h-full flex flex-col order-1 justify-center mt-16">
+    <div class="w-full h-full flex flex-col order-1 justify-center mt-16 bg-white">
         <div class="w-full h-[15rem] relative bar">
             <div class="absolute w-[25%] h-[11rem] bg-black z-10 black"></div>
             <div class="absolute w-[94%] h-[11rem] bg-[#D2FF56] rounded-r-[3rem] green flex items-center justify-end pe-10 font-new font-semibold stretch text-[3rem] leading-none stretch">3-4 x</div>
