--- a/src/components/marquee.astro
+++ b/src/components/marquee.astro
@@ -90,7 +90,7 @@
   ---
   
   <div class="marquee-container">
-    <p class="ps-20">Trusted by:</p>
+    <p class="ps-20 font-semibold">Trusted by:</p>
     <div class="marquee" id="marquee">
       
       {[...Array(repetitions)].map(() => (
