--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -3,21 +3,12 @@ const astrix = '/assets/asterisk.png';
 import Layout from "../../layouts/Layout.astro";
 import ServiceCards from '../../components/ServiceCards.astro';
 import CTAPage from "../../components/CTAPage.astro";
+import Navbar from "../../components/Navbar.astro";
+import HeroSixthPage from "../../components/HeroSixthPage.astro";
 ---
 <Layout title="CX-Point">
 <div class="w-full min-h-screen bg-white">
-    <nav class="navbar absolute top-[4%] left-1/2 transform -translate-x-1/2 w-[88%] bg-transparent z-50">
-        <div class="container mx-auto flex justify-between items-center p-4">
-            <div class="text-xl font-bold text-black mix-blend-difference"><a href="/">Logo</a></div>
-            <ul class="flex space-x-4 px-6 py-4 bg-[#373737] rounded-full ">
-                <li class="nav-links"><a href="/products" class="text-white hover:rounded-full">Products</a></li>
-                <li class="nav-links"><a href="/company" class="text-white ">Company </a></li>
-                <li class="nav-links"><a href="/services" class="text-white ">Services</a></li>
-                <li class="nav-links"><a href="#contact" class="text-white ">Contact</a></li>
-            </ul>
-            <button class=" text-black text-[0.9rem] px-6 py-4 rounded-full bg-[#F9FC50] font-semibold">Get in touch</button>
-        </div>
-    </nav>
+    <Navbar/>
     <div class="w-full h-[90vh] flex flex-col justify-start pt-40 px-20 pb-20">
         <div>
             <div class="w-full flex items-center gap-4">
@@ -39,11 +30,12 @@ import CTAPage from "../../components/CTAPage.astro";
     <div class="w-screen h-full bg-white">
         <ServiceCards />
     </div>
-    <div class="w-full h-[100vh] flex flex-col items-start justify-start gap-10 px-20 pt-20">
+    <div class="w-full h-fit flex flex-col items-start justify-start gap-10 px-20 pt-20">
         <div class="w-[70%]  font-new text-[4rem] leading-[100%] font-bold">
             <p>We blend unmatched expertise, tailored solutions, and proven results to make your app/SaaS thrive.</p>
         </div>
     </div>
+    <HeroSixthPage/>
     <CTAPage />
 </div>
 </Layout>
