--- a/src/pages/company/index.astro
+++ b/src/pages/company/index.astro
@@ -4,6 +4,7 @@ import astrix from "../../../public/assets/asterisk.png";
 import Marquee from "../../components/marquee.astro";
 import HeroSixthPage from "../../components/HeroSixthPage.astro";
 import CTAPage from "../../components/CTAPage.astro";
+import Navbar from "../../components/Navbar.astro";
 
 const sections = [
     {
@@ -32,18 +33,7 @@ const sections = [
 
 <Layout title="CX-Point">
     <div class="w-full h-full bg-[#FBF8F4]">
-        <nav class="navbar absolute top-[4%] left-1/2 transform -translate-x-1/2 w-[88%] bg-transparent z-50">
-            <div class="container mx-auto flex justify-between items-center p-4">
-                <div class="text-xl font-bold text-black mix-blend-difference"><a href="/">Logo</a></div>
-                <ul class="flex space-x-4 px-6 py-4 bg-[#373737] rounded-full ">
-                    <li class="nav-links"><a href="/products" class="text-white hover:rounded-full">Products</a></li>
-                    <li class="nav-links"><a href="/company" class="text-white ">Company </a></li>
-                    <li class="nav-links"><a href="/services" class="text-white ">Services</a></li>
-                    <li class="nav-links"><a href="#contact" class="text-white ">Contact</a></li>
-                </ul>
-                <button class=" text-black text-[0.9rem] px-6 py-4 rounded-full bg-[#F9FC50] font-semibold">Get in touch</button>
-            </div>
-        </nav>
+        <Navbar/>
         <div class="w-full min-h-screen px-20 py-20">
             <div class="w-full pt-24">
                 <div class="w-full h-full overflow-hidden">
@@ -101,6 +91,18 @@ const sections = [
                     <p class="text-[16px] font-semibold text-gray-500">
                         We don't just create designs - we solve your problems. It all starts with listening. We dive deep into understanding your business, your challenges, and your goals. Then we use data, creativity and practical solutions to craft a plan that works. No unnecessary extras, no bloated budgets - just what makes sense for you.  
                     </p>
+                    <div class="w-full flex items-center justify-center py-24">
+                        <div class="w-full h-full grid grid-cols-4 md:grid-cols-2 lg:grid-cols-4 gap-4">
+                            <div class="w-full h-full bg-white rounded-tl-3xl rounded-br-3xl py-5 px-4 text-center text-2xl">test</div>
+                            <div class="w-full h-full bg-white rounded-bl-3xl rounded-br-3xl py-5 px-4 text-center text-2xl">test</div>
+                            <div class="w-full h-full bg-white rounded-bl-3xl rounded-br-3xl py-5 px-4 text-center text-2xl">test</div>
+                            <div class="w-full h-full bg-white rounded-bl-3xl rounded-tr-3xl py-5 px-4 text-center text-2xl">test</div>
+                            <div class="w-full h-full bg-white rounded-tr-3xl rounded-bl-3xl py-5 px-4 text-center text-2xl">test</div>
+                            <div class="w-full h-full bg-white rounded-tr-3xl rounded-tl-3xl py-5 px-4 text-center text-2xl">test</div>
+                            <div class="w-full h-full bg-white rounded-tr-3xl rounded-tl-3xl py-5 px-4 text-center text-2xl">test</div>
+                            <div class="w-full h-full bg-white rounded-br-3xl rounded-tl-3xl py-5 px-4 text-center text-2xl">test</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
